# fixed_reader_test

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  eth.c  eth.h  main.c  mqtt_client.c  mqtt_config.h  network_config.h  rfid.c  rfid.h  uart.c  uart.h  web.c  web.h  wifi.c  wifi.h  wifi_config.c  wifi_config.h
